--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ tests/test_results.csv
 *.fir_coefs
 examples/AN00221_freq_domain_example/doc/pdf/AN00218.pdf
 examples/AN00218_app_hires_DAS_fixed/doc/pdf/AN00218.pdf
+
+# waf build files
+.lock-waf_*
+.waf-*/
+build/
