--- a/lib_mic_array/.cproject
+++ b/lib_mic_array/.cproject
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?>
+
+<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="com.xmos.cdt.toolchain.128414161">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="com.xmos.cdt.toolchain.128414161" moduleId="org.eclipse.cdt.core.settings" name="Default">
@@ -211,6 +213,10 @@
 									<listOptionValue builtIn="false" value="/ssdbuilds/moby_dick/Installs/Linux/target/include/xc"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/moby_dick/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/moby_dick/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include/xc"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/bfp}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1370880023" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -546,6 +552,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/pdf}&quot;"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/moby_dick/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/moby_dick/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/bfp}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1236095096" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -890,6 +899,10 @@
 									<listOptionValue builtIn="false" value="/ssdbuilds/moby_dick/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/moby_dick/Installs/Linux/target/include/clang"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/moby_dick/Installs/Linux/target/include/c++/v1"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include/clang"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include/c++/v1"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/bfp}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.757073714" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
